# Delta.AI

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  WORKFLOW.md  docker-compose.yml  fly.toml  pyproject.toml
.claude/agents/: ai-integration.md  backend-engineer.md  devops-engineer.md  frontend-engineer.md  product-spec.md  security-reviewer.md  supabase-architect.md  test-engineer.md
.github/workflows/: backend-ci.yml  backend-deploy.yml
app/: README.md  config.py  logging_config.py  main.py  requirements.txt
app/ai/: README.md  __init__.py
app/db/: README.md  __init__.py  auth.py  health.py  supabase_client.py
app/modules/: README.md  __init__.py
app/modules/perfil/: README.md  __init__.py  calculos.py  repository.py  router.py  schemas.py  service.py
docs/: README.md  deploy.md  erd.md
docs/adr/: README.md
docs/costs/: README.md
docs/security/: README.md
specs/: 2026-07-17-calculo-imc.md  2026-07-17-registro-de-peso.md  2026-07-17-registro-de-refeicao.md  README.md
supabase/: README.md  config.toml
supabase/migrations/: 20260716000000_init_profiles_goals.sql  20260717090000_profiles_add_atividade_consentimento.sql  20260717120000_create_pesagens.sql  20260717130000_condicoes_saude_add_gestante.sql  README.md
tests/: README.md  conftest.py  test_health.py  test_perfil_calculos.py  test_perfil_repository.py  test_perfil_router.py  test_perfil_service.py  test_pesagens_router.py
web/: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
web/src/app/: layout.tsx  (+3 more)
(+27 files in other folders)
